Unit tests added fixed a bug about the docker
